button still not showing correctly in heroku

--- a/app/assets/stylesheets/country.scss
+++ b/app/assets/stylesheets/country.scss
@@ -60,7 +60,7 @@ $color-one: rgb(52, 165, 111);
 .country_button {
 	background-color: $color-one;
 	border: 1px solid $color-one !important;
-	font-size: 20px;
+	font-size: 20px !important;
 }
 
 .glyphicon.glyphicon-plane {
